<resources>
    <string name="app_name">IFruit</string>
    <string name="valid_character_username">123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_.</string>
    <string name="valid_character_password">123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@#$*</string>
    <string name="login_button_text">ورود</string>
    <string name="forgot_password">فراموشی رمز عبور؟</string>
    <string name="login_page">صفحه ورود</string>
    <string name="username_hint_text">نام کاربری</string>
    <string name="password_hint_text">رمز عبور</string>
    <string-array name="job_title">
        <item>حسابدار</item>
        <item>غرفه دار</item>
        <item>راننده</item>
    </string-array>
    <string name="title_activity_stuff_managing">stuffManagingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    ////////////////////////////////////////////////////////Setting
    <string name="setting">تنظیمات</string>
    <string name="page_color">رنگ صفحه</string>
    <string name="change_font">تغییر فونت</string>
    <string name="save_changes_button">ثبت تغییرات</string>
    <string name="account_name">تغییر نام</string>
    ////////////////////////////////////////////////////////Costs
    <string name="fee_reason_hint">مورد هزینه</string>
    <string name="fee_amount_hint">مقدار هزینه</string>
    <string name="date_hint">تاریخ(YYYY-MM-DD)</string>
    <string name="save">ثبت</string>

    ///////////////////////////////////////////////////////Contract
    <string name="name_hint">نام مشتری</string>
    <string name="national_code_hint">کد ملی</string>
    <string name="Transaction_volume_hint">حجم معامله</string>
    <string name="Contract_title_hint">عنوان قرارداد</string>
    <string name="Product_Information_hint">اطلاعات محصول</string>
    <string name="contract_date_hint">تاریخ(YYYY-MM-DD) </string>

    ///////////////////////////////////////////////////////fruit info AC
    <string name="fruit_name_hint">نام میوه</string>
    <string name="fruit_price_hint">قیمت میوه</string>
    <string name="fruit_qlt_hint">کیفیت میوه</string>

    //////////////////////////////////////////////////////debt AC
    <string name="debtor_name_hint">نام بدهکار یا بستانکار</string>
    <string name="debtor_phone_hint">شماره تلفن بدهکار</string>
    <string name="debtor_debt_hint">مقدار بدهی</string>

    //////////////////////////////////////////////////////salary AC
    <string name="salary_name_hint">نام کارمند</string>
    <string name="salary_salary_hint">مقدار حقوق پرداختی</string>
    <string name="salary_phone_num_hint">شماره تلفن کارمند</string>


    /////////////////////////////////////////////////////////Accounting Ac
    <string name="accounting">حسابداری</string>
    <string name="fee">هزینه ها</string>
    <string name="contract">قرارداد</string>
    <string name="income">درآمد</string>
    <string name="salary">حقوق</string>
    <string name="debt">بدهکاری و بستانکاری</string>
    <string name="fruit_info">اطلاعات میوه</string>
    <string name="add_contact">اضافه کردن مخاطب</string>
    <string name="employee_manage">مدیریت کارمندان</string>
    //////////////////////////////////////////////////////////
    <string name="forgot_password_title">فراموشی رمز عبور</string>

    ///////////////////////////////////////////////////////SMS AC
    <string name="phone_number">شماره تلفن</string>
    <string name="send">ارسال</string>
    <string name="panel_title">پنل پیامکی</string>
    <string name="massage_edittext_hint">متن پیام ...</string>

    ///////////////////////////////////////////////////////Search AC
    <string name="data">اطلاعات</string>
    <string name="search_edittext">جستجو ...</string>

    ///////////////////////////////////////////////////////Contact AC
    <string name="contact_name_hint">نام مخاطب</string>
    <string name="contact_title_hint">عنوان مخاطب</string>
    <string name="contact_phone_num_hint">شماره تماس مخاطب</string>

    //////////////////////////////////////////////////////Employee management
    <string name="employee_name_hint">نام کارمند</string>
    <string name="employee_job_title_hint">سمت کاری کارمند</string>
    <string name="employee_phone_num_hint">شماره تماس کارمند</string>
    <string name="employee_salary_hint">حقوق پایه</string>


    //////////////////////////////////////////////////////cost recycle view layout
    <string name="cost_reason">دلیل هزینه : </string>
    <string name="cost_amount">مقدار هزینه : </string>
    <string name="cost_date">تاریخ هزینه : </string>
    /////////////////////////////////////////////////////contract recycle view layout
    <string name="contract_title">عنوان قرارداد : </string>
    <string name="contract_name">نام طرف قرارداد : </string>
    <string name="contract_transaction_v">حجم معامله : </string>
    <string name="contract_nationalcode">کد ملی طرف قرارداد : </string>
    <string name="contract_product_info">مشخصات محصولات : </string>
    <string name="contract_date">تاریخ عقد قرارداد : </string>
    /////////////////////////////////////////////////////debt recycle view layout
    <string name="debtor_name">نام بدهکار : </string>
    <string name="debtor_phone_num">شماره تلفن بدهکار : </string>
    <string name="debtor_debt">مقدار بدهی : </string>
    /////////////////////////////////////////////////////employee managment recycle view layout
    <string name="employee_name">نام کارمند : </string>
    <string name="employee_phone">شماره تماس کارمند : </string>
    <string name="employee_date_employee">تاریخ استخدام :</string>
    <string name="employee_salary">حقوق پایه : </string>
    <string name="employee_job_title">سمت کارمند : </string>
    /////////////////////////////////////////////////////employee managment recycle view layout
    <string name="fruit_name">نام میوه : </string>
    <string name="fruit_price">قیمت میوه : </string>
    <string name="fruit_qlt">کیفیت میوه : </string>
    /////////////////////////////////////////////////////contact recycle view layout
    <string name="contact_name">مخاطب : </string>
    <string name="contact_title">عنوان : </string>
    <string name="contact_phone">شماره : </string>
    /////////////////////////////////////////////////////salary recycle view layout
    <string name="salary_name">نام کارمند : </string>
    <string name="salary_amount">حقوق پرداخت شده : </string>
    <string name="salary_phone">شماره تماس : </string>
    ////////////////////////////////////////////////////

</resources>