<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#616161"
    tools:context=".controller.DebtActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/debt_back"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_back"
            android:padding="@dimen/small_margin"/>

        <TextView
            android:id="@+id/debt_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/debt_back"
            android:padding="@dimen/normal_margin"
            android:text="@string/debt"
            android:textColor="@color/white"
            android:textSize="@dimen/text_header_size"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_search"
            android:padding="@dimen/normal_margin"
            android:layout_marginLeft="@dimen/normal_margin"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/dividing_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_margin="@dimen/small_margin"
        android:background="@drawable/line" />

    <EditText
        android:id="@+id/debtor_name_ac"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/dividing_line"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/normal_margin"
        android:layout_marginTop="@dimen/large_margin"
        android:background="@drawable/edit_text_border2"
        android:hint="@string/debtor_name_hint"
        android:maxLength="@android:integer/config_shortAnimTime"
        android:maxLines="1"
        android:padding="@dimen/normal_margin"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/debtor_phone_num_ac"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/debtor_name_ac"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/normal_margin"
        android:background="@drawable/edit_text_border2"
        android:hint="@string/debtor_phone_hint"
        android:maxLength="@android:integer/config_shortAnimTime"
        android:maxLines="1"
        android:padding="@dimen/normal_margin"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/debtor_debt_ac"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/debtor_phone_num_ac"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/normal_margin"
        android:background="@drawable/edit_text_border2"
        android:hint="@string/debtor_debt_hint"
        android:maxLength="@android:integer/config_shortAnimTime"
        android:maxLines="1"
        android:padding="@dimen/normal_margin"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <ImageButton
        android:id="@+id/debt_save_btn"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_below="@id/debtor_debt_ac"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/xxlarge_margin"
        android:background="@drawable/save_button"
        android:shadowRadius="@android:integer/status_bar_notification_info_maxnum" />

</RelativeLayout>